# rust_os

./: Cargo.toml  Makefile  README.md
.cargo/: config
src/: console.rs  entry.asm  gdt.rs  interrupts.rs  lang_item.rs  lang_items.rs  lib.rs  linker.ld  logger.rs  main.rs  sbi.rs  serial.rs  syscall.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
