[package]
name = "blog_os"
version = "0.1.0"
authors = ["curtain <1410768946@qq.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# use xbuild when cargo bootimage
[package.metadata.bootimage]
build-command = ["xbuild"]

# for static instance initialization when first use, but not compile time
[dependencies.lazy_static]
version = "1.0"
feature = ["spin_no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.16"
volatile = "0.2.6"
spin = "0.4.9"
