[package]
name = "blog_os"
version = "0.1.0"
authors = ["curtain <1410768946@qq.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# use xbuild when cargo bootimage
[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x4", "-serial", "stdio",
  "-display", "none"
]
test-success-exit-code = 33     # (0x10 << 1) | 1


[[test]]
name = "stack_overflow"
harness = false
# for static instance initialization when first use, but not compile time
# [dependencies.lazy_static]
# version = "1.0"
# features = ["spin_no_std"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.16"
volatile = "0.2.6"
spin = "0.4.9"
lazy_static = { version = "1.4", features = ["spin_no_std"]}
# provide abstract interface for port IO
x86_64 = "0.13.3"
# for serial support
uart_16550 = "0.2.12"
