[package]
name = "blog_os"
version = "0.1.0"
authors = ["curtain <1410768946@qq.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO exception_handler 语言项, 直接abort掉程序
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"



[dependencies]
